--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
             margin: 60px auto;
             overflow: hidden;
             position: relative;
-            background-image: url(./main-bg-image.png);
+            background-image: url(./images/main-bg-image.png);
             background-repeat: no-repeat;
             background-size: cover;
         }
